[package]
name = "vvtk"
version = "0.1.0"
authors = [
   "weitsang <weitsang@nus.edu.sg>", 
   "YoungHS-NUS <hhhh@u.nus.edu>",
   "tankangliang <tankangliang@u.nus.edu>",
   "benclmnt <bennett.clement@u.nus.edu>",
   "hungkhoaitay <e0550385@u.nus.edu>", 
   "giterator <e0552200@u.nus.edu>"
   ]
edition = "2021"

description = "This project aims to design and develop a set of robust and high performance CLI tools for analyzing, processing, debugging, and viewing 3D point clouds using Rust"
readme = "README.md"
repository = "https://github.com/nus-vv-stream/vvtk"

license = "Apache-2.0"
keywords = ["3D", "Point Cloud", "Volumetric Video"]
categories = ["command-line-utilities"]
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[lib]
name = "vivotk"
path = "src/lib.rs"

[dependencies]
ply-rs = { git = "https://github.com/hungkhoaitay/ply-rs", version = "0.1.3" }
clap = { version = "4.2.7", features = ["derive", "cargo"] }
image = "0.24.3"
clipboard = "0.5.0"
thiserror = "1.0"
byteorder = "1.4.3"
bytemuck = { version = "1.7.3", features = [ "derive" ] }
cgmath = "0.18.0"
pollster = "0.2.5"
rayon = "1.5.1"
kdam = "0.2"
anyhow = "1.0"
roxmltree = "0.15"
kiddo = "0.2.4"
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
winit = { version = "0.27.3", optional = true }
wgpu = { version = "0.13.1", optional = true }
wgpu_glyph = { version = "0.17.0", optional = true }
egui = { version = "0.19.0", optional = true }
egui_winit_platform = { version = "0.16.0", optional = true } 
egui_wgpu_backend = { version = "0.19.0", optional = true }
epi = { version = "0.17.0", optional = true }
regex = { version = "1.6.0", optional = true }
reqwest = { version = "0.11", features = ["gzip"], optional = true }
tempfile = { version = "3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_with = { version = "2", optional = true }
quick-xml = { version = "0.25", features = ["serialize"], optional = true }
crossbeam-channel = "0.5.6"
nalgebra = "0.32.2"
num-traits = "0.2"
float-ord = "0.3"
color_space = "0.5"
parry3d-f64 = "0.13.5"
nalgebra-sparse = "0.9.0"
fnv = "1.0.7"
itertools = "0.11.0"
atomic_float = "0.1.0"
# ffmpeg-next = "6"

[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "vvplay"
required-features = ["render", "dash"]

# [[bin]]
# name = "vvdash"

[[bin]]
name = "vv"

[features]
default = ["render", "dash"]
render = ["dep:winit", "dep:wgpu", "dep:wgpu_glyph", "dep:egui", "dep:egui_winit_platform", "dep:egui_wgpu_backend", "dep:epi"]
dash = ["dep:reqwest", "dep:regex", "dep:tempfile", "dep:serde", "dep:serde_with", "dep:quick-xml", "dep:tokio", "dep:futures"]

[[bench]]
name = "reader"
harness = false
